--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@ body{
     margin: 0;
     background:white;
     color: #415A41;
+    text-align: center;
 }
 
-he {
+h1 {
     margin: 0;
     background: #80B881;
     color: #375C37;
