--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@ body{
     text-align: center;
 }
 
+h2{
+    text-align: center;
+}
+
+p{
+    text-align: center;
+}
+
 .he {
     margin: 0;
     background: #80B881;
