--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ p{
 
 a{
     text-align: center;
+    
+}
+
+a:hover{
+    color: blue;
 }
 
 .he {
@@ -22,7 +27,7 @@ a{
     background: #80B881;
     color: #375C37;
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 
 }
