--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,18 @@ a:hover{
     padding-bottom: 40px;
 
 }
+
+.image-cropper {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  
+  img {
+    align-items: center;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+  }
