--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,12 @@ a:hover{
 }
 
 .image-cropper {
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 300px;
     position: relative;
     overflow: hidden;
     border-radius: 50%;
+    
   }
   
   img {
@@ -45,4 +46,6 @@ a:hover{
     margin: 0 auto;
     height: 100%;
     width: auto;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
