--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,11 @@ a:hover{
 .image-cropper {
     width: 300px;
     height: 300px;
-    position: relative;
+    align-items: center;
     overflow: hidden;
     border-radius: 50%;
+    padding-top: 40px;
+    padding-bottom: 40px;
     
   }
   
@@ -46,6 +48,5 @@ a:hover{
     margin: 0 auto;
     height: 100%;
     width: auto;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    
   }
